src/test/deca/codegen/invalid/homemade/divisionByZeroFloat.res
ERROR : You have used an arithmetic operation on Floats that triggered an overflow.
